# pyforc

./: .bumpversion.cfg  .codecov.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .travis.yml  Forc.py  LICENSE  Makefile  MplWidget.py  PyFORCGUI.py  PyFORCGUI.ui  PyFORCGUIBase.py  PyFORCGUIBase.ui  README.md  Untitled.ipynb  conf.py  errors.py  extensionlib.py  index.md  main.py  make.bat  plotter.py  plotting.py  profiling.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test_fig.html  tests.py  travis.yml  util.py  worker.py
.circleci/: config.yml
.github/workflows/: pypi_publish.yml  python-publish.yml  test.yml
docs/: Makefile  make.bat
docs/source/: Forc.rst  PyFORCGUI.rst  conf.py  errors.rst  index.rst  modules.rst  tests.rst  util.rst
examples/: plotting.ipynb
legacy/: main.py  plotting.py  profiling.ipynb  testthread.py  worker.py
notebooks/: plotting.ipynb
pyforc/core/: README.md  __init__.py  config.py  coordinates.py  forc.py  forcdata.py  ingester.py  ops.py  plot.py
src/pyforc/core/: __init__.py  config.py  coordinates.py  forc.py  forcdata.py  ops.py  plot.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_config.py  test_coordinates.py  test_forc.py  test_ingester.py
tests/fixtures/: data.py  test_data.py  test_forc
